src/objects/Referral__c.object
<CustomObject>
    <fields>
        <fullName>Desired_Living_Environment_at_Discharge__c</fullName>
        <label>Desired Living Environment at Discharge</label>
        <picklist>
            <picklistValues>
                <fullName>ICF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supported Living</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>With Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>With Foster Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>With Housemates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alone</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Diabetes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Diabetes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Diagnosis_Date__c</fullName>
        <label>Diagnosis Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Diagnosis_Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Diagnosis_III__c</fullName>
        <label>Diagnosis III</label>
        <picklist>
            <picklistValues>
                <fullName>ABI/TBI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autism (ASD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intellectual Disability (ID)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental Health (MH)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Diagnosis_II_Multi__c</fullName>
        <label>Diagnosis II (Multi)</label>
        <picklist>
            <picklistValues>
                <fullName>Diabetes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hypertension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Cholesterol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seizure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diagnosed Depressive Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diagnosed Anxiety Disorder</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Diagnosis_II__c</fullName>
        <label>Diagnosis II</label>
        <picklist>
            <picklistValues>
                <fullName>ABI/TBI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autism (ASD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intellectual Disability (ID)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental Health (MH)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diabetes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hypertension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Cholesterol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thyroid Disease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seizure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attention Deficit Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diagnosed Depressive Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diagnosed Anxiety Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diagnosed Psychotic Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Learning Disability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developmental Disorder</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Diagnosis_I__c</fullName>
        <label>Diagnosis I</label>
        <picklist>
            <picklistValues>
                <fullName>ABI/TBI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autism (ASD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intellectual Disability (ID)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental Health (MH)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Traumatic Brain Injury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seizures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Encephalopathy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brain Tumor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Encephalitis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hypoxia/Anoxia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stroke/ CVA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spinal Cord Injury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meningitis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Did_Alcohol_Contribute_to_Injury__c</fullName>
        <label>Did Alcohol Contribute to Injury</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Did_Drug_Use_Contribute_to_Injury__c</fullName>
        <label>Did Drug Use Contribute to Injury</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discharge_Outcome__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discharge Outcome</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discrimination_Reason__c</fullName>
        <label>Discrimination Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Gender</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Race</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sexual Orientation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Drug_Possession_Distribution__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Drug Possession/Distribution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duration_of_Unconsciousness__c</fullName>
        <label>Duration of Unconsciousness</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eating_Disorders__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eating Disorders</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Elopement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Elopement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <description>MN Specific</description>
        <inlineHelpText>If different than the person&apos;s permanent location</inlineHelpText>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Esigned_By__c</fullName>
        <label>Esigned By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Esigned_Time__c</fullName>
        <label>Esigned Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Estimated_Discharge_Date__c</fullName>
        <description>MN Specific</description>
        <label>Estimated Discharge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Evaluated_By_External__c</fullName>
        <label>Evaluated By (External)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Evaluated_By_Internal_Other__c</fullName>
        <description>additional evaluated-by field for NR</description>
        <label>Evaluated By (Internal - Other)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Evaluated_By_Internal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Evaluated By (Internal)</label>
        <referenceTo>TMN_User__c</referenceTo>
        <relationshipLabel>Referrals (Evaluated By (Internal))</relationshipLabel>
        <relationshipName>Referrals1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Evaluated_By_Source__c</fullName>
        <label>Evaluated By Source</label>
        <picklist>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Evaluated_By__c</fullName>
        <label>Evaluated By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Evaluation_Date__c</fullName>
        <label>Evaluation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exterior_Locking_Mechanism_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exterior Locking Mechanism Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Extreme_Unwanted_Behaviors__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Extreme Unwanted Behaviors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Family_History__c</fullName>
        <label>Family History</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family_Involvement_Restrictions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Family Involvement Restrictions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <description>MN Specific</description>
        <inlineHelpText>If different than the person&apos;s permanent location</inlineHelpText>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Felony__c</fullName>
        <label>Felony</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Felony_ies__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Felony/ies</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Financial_Resources__c</fullName>
        <label>Financial Resources</label>
        <picklist>
            <picklistValues>
                <fullName>PI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSDI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MediCal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Pay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workers Compensation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Railroad Pension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veteran&apos;s Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSDI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Railroad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VA Funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Earned Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Financial_Status__c</fullName>
        <label>Financial Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fire_Setting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fire Setting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gang_Involvement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gang Involvement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gender_Specific_Staffing__c</fullName>
        <label>Gender Specific Staffing</label>
        <picklist>
            <picklistValues>
                <fullName>Male Preferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female Preferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Preference</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Geographic_Restrictions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Geographic Restrictions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Glasgow_Coma_Scale__c</fullName>
        <label>Glasgow Coma Scale</label>
        <picklist>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Goals_from_the_Referral_Source__c</fullName>
        <label>Goals from the Referral Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goals_of_Care__c</fullName>
        <label>Goals of Care</label>
        <picklist>
            <picklistValues>
                <fullName>Client/family education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family respite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monitoring to avoid clinical complications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Palliative Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rehabilitation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skilled Nursing Treatments</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <label>Grade</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guardianship_Type__c</fullName>
        <label>Guardianship Type</label>
        <picklist>
            <picklistValues>
                <fullName>Full Guardianship/Conservatorship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial Guardianship/Conservatorship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_Evaluation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>whether or not evaluation exists for this referral</description>
        <label>Has Evaluation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Pets__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Pets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Health_and_Safety_Needs__c</fullName>
        <description>WV specific field</description>
        <label>Health and Safety Needs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hearing__c</fullName>
        <label>Hearing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>High_Risk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>High Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>History_of_Bowel_Obstructions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>History of Bowel Obstructions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hold_Date__c</fullName>
        <label>Hold Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hold_Reason__c</fullName>
        <label>Hold Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Pending Funding Availability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Waiver Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Authorization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wait List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical/Health Concerns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client/Family Choice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hospitalization_Within_the_past_year__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hospitalization Within the Past Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>How_did_referral_come_in__c</fullName>
        <description>For CareMeridian use</description>
        <label>How did referral come in</label>
        <picklist>
            <picklistValues>
                <fullName>AllScripts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Curaspan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inservice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_did_they_learn__c</fullName>
        <label>How did referrer learn about us?</label>
        <picklist>
            <picklistValues>
                <fullName>Internet Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speaker/ CEU Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertisement (commercial, email, mailing, print based)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referred Before</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketer/ Clinical Evaluator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Program/ Colleague</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email/Mailing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Participant&apos;s Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertisement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NeuroRestorative Clinical Evaluator / Marketer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colleague</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ICC_Care_Plan_Submitted__c</fullName>
        <label>ICC Care Plan Submitted</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_Yes_Age_Requirements__c</fullName>
        <label>If Yes, Age Requirements?</label>
        <picklist>
            <picklistValues>
                <fullName>Older</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Younger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Age Is Not a Factor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_Yes_How_Many__c</fullName>
        <label>If Yes, How Many?</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_Yes_Level__c</fullName>
        <label>If Yes, Level?</label>
        <picklist>
            <picklistValues>
                <fullName>Frequent Visitation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limited Visitation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supervised Visitation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsupervised Visitation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_Yes_Type_of_Unwanted_Sexual_Behavior__c</fullName>
        <label>If Yes, Type of Unwanted Sexual Behavior</label>
        <picklist>
            <picklistValues>
                <fullName>Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aggression</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acting Out</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_Yes_What_kind__c</fullName>
        <label>If Yes, What kind?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ingesting_Non_Consumables__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ingesting Non-Consumables</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initiation_of_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Initiation of Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Information_Release_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Information Release Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Reunification_Process__c</fullName>
        <label>Is Reunification Process</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Law_Enforcement_Involvement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Law Enforcement Involvement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legal_Guardian_Status__c</fullName>
        <label>Legal/Guardianship Status</label>
        <picklist>
            <picklistValues>
                <fullName>Civil Commitment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conservator/Conservatorship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Guardian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guardian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Care Representative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kinship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limited Guardianship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shelter Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Assumes Guardianship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voluntary Placement Agreement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legal_History__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legal History</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Length_of_time__c</fullName>
        <label>If Yes, Length of time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_At_Time_of_Injury__c</fullName>
        <label>Level At Time of Injury</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_of_Disability__c</fullName>
        <description>CA Specific Field</description>
        <label>Level of Disability</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>